--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
     <div class="container">
         <div class="left-panel">
             <div class="profile-img-wrapper">
-                <img alt="" src="resources/img/photo-placeholder.png">
+                <img alt="" src="resources/img/ava1.jpg">
             </div>
 
             <section>
                 <div class="about">
                     <p>
-                        Over 1+ years of IT Industry experience in Testing and Quality Assurance, and Having extensive
-                        experience in the field of Software Testing with emphasis on Manual Testing, Automated Testing
-                        that includes Functional, Performance, Stress, Usability, Regression, System Testing of Web
-                        based, and GUI based client/server applications using diverse tool set like Postman, Devtools,
-                        Charles, Selenium, Java, Browserstack, Docker, GitHub, TestRail, Jenkins, JUnit5 and others.
+                        Over 1+ year of experience in the IT industry in the field of testing and quality assurance,
+                        extensive experience in the area of WEB UI and API testing, including manual and auto-testing.
+                        Stack: Java, JUnit5, Selenide, RestAssured, Allure, Jenkins, Selenoid.
                     </p>
                     <br>
                     <p>
@@ -139,13 +137,14 @@
                 <hr>
                 <div class="education-item">
                     <div class="date">
-                        <h3> <i class="fas fa-calendar-alt"></i> 2021 <i class="fas fa-graduation-cap"></i> QA Guru</h3>
+                        <h3><i class="fas fa-calendar-alt"></i> 2021 <i class="fas fa-graduation-cap"></i> QA Guru</h3>
                     </div>
                     <p>QA Automation Engineer</p>
                 </div>
                 <div class="education-item">
                     <div class="date">
-                        <h3><i class="fas fa-calendar-alt"></i> 2006 - 2013 <i class="fas fa-graduation-cap"></i> South Federal University</h3>
+                        <h3><i class="fas fa-calendar-alt"></i> 2006 - 2013 <i class="fas fa-graduation-cap"></i> South
+                            Federal University</h3>
                     </div>
                     <p>Master Degree in Psychophysiology</p>
                 </div>
@@ -165,11 +164,17 @@
                             <h4><i class="fas fa-user"></i> Functional Tester</h4>
                             <div class="responsibilities">
                                 <ul>
-                                    <li>Designed and implemented a robust automation framework for UI testing using Selenide and Selenoid.</li>
+                                    <li>Designed and implemented a robust automation framework for UI testing using
+                                        Selenide and Selenoid.
+                                    </li>
                                     <li>Created and maintained API tests using RestAssured.</li>
                                     <li>Integrated Allure reports for clear and insightful test reporting.</li>
-                                    <li>Worked within a CI/CD pipeline, ensuring smooth deployments and high code quality.</li>
-                                    <li>Collaborated with cross-functional teams to ensure thorough testing of new features and bug fixes.</li>
+                                    <li>Worked within a CI/CD pipeline, ensuring smooth deployments and high code
+                                        quality.
+                                    </li>
+                                    <li>Collaborated with cross-functional teams to ensure thorough testing of new
+                                        features and bug fixes.
+                                    </li>
                                 </ul>
 
                             </div>
@@ -182,7 +187,7 @@
             </section>
 
             <section class="skills">
-                <h4 class="section-title">Skills</h4>
+                <h4 class="section-title">Stack</h4>
                 <hr>
                 <article>
                     <ul class="skills-list">
@@ -200,8 +205,9 @@
                 </article>
             </section>
 
+
             <section class="languages">
-                <h2 class="section-title">Languages</h2>
+                <h4 class="section-title">Languages</h4>
                 <hr>
                 <article>
                     <ul class="languages-list">
@@ -212,6 +218,175 @@
             </section>
         </div>
     </div>
+
+
+    <div class="full-width-section">
+        <!-- Full width section content -->
+        <section class="skills">
+            <h4 class="section-title">Hard skills</h4>
+            <hr>
+            <article>
+                <ul class="skills-list">
+                    <li>
+                        <strong>REST:</strong>
+                        <ul>
+                            <li class="checkmark">Idempotency. Statless/Stateful. CRUD operations. Safe/Unsafe. Response
+                                codes.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Java:</strong>
+                        <ul>
+                            <li class="checkmark">OOP Principles: Encapsulation, inheritance, polymorphism, and
+                                abstraction.
+                            </li>
+                            <li class="checkmark">Access Modifiers: Public, private, protected, and default. Non Access:
+                                Static
+                            </li>
+                            <li class="checkmark">Core Concepts: Datatypes, operators, control statements, Exception
+                                handling.
+                            </li>
+                            <li class="checkmark">Collections Framework - Map, List. StreamAPI.</li>
+                            <li class="checkmark">Exception Hierarchy: Checked vs unchecked exceptions, Custom exception
+                                handling.
+                            </li>
+                            <li class="checkmark">Advanced Features: Enums, method overriding, and overloading.</li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <strong>RestAssured:</strong>
+                        <ul>
+                            <li class="checkmark">Serialization, @JsonProperty, @JsonIgnore, @JsonInclude</li>
+                            <li class="checkmark">Spec Builder: Using Spec Builders for reusable request/response
+                                specifications.
+                            </li>
+                            <li class="checkmark">Logging: Configuring logging of requests and responses.</li>
+                            <li class="checkmark">Setup: Configuring RestAssured for a project, Setting up base URI and
+                                path.
+                            </li>
+                            <li class="checkmark">DTO Request and Response: Handling and validating status, path,
+                                headers, query, body.
+                            </li>
+                            <li class="checkmark">Extracting Data: Extracting data from response for further use.</li>
+                            <li class="checkmark">Parameterization: Sending parameters and body in requests, Path, Query
+                                and Form parameter usage.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Selenide:</strong>
+                        <ul>
+                            <li class="checkmark">Configuration: Setting up Selenide in a project, Configuring browser
+                                properties and timeouts.
+                            </li>
+                            <li class="checkmark">Explicit and Implicit Waits: Understanding and implementing waits to
+                                handle synchronization.
+                            </li>
+                            <li class="checkmark">DOME structure, CSS and Xpath locators</li>
+                            <li class="checkmark"> SelenideElement+Condition ElementsCollection+CollectionCondition
+                                various actions and assertions Locators: Utilizing Selenide selectors to locate
+                                elements, Handling dynamic elements.
+                            </li>
+                            <li class="checkmark">POM: defining roles for users, assign context of available pages to
+                                the given role.
+                            </li>
+                            <li class="checkmark">File Upload and Download: Handling file uploads and downloads with
+                                Selenide.
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <strong>Framework libraries:</strong>
+                        <ul>
+                            <li class="checkmark">JUnit: Basic annotations: @Test, @Before, @After, Parameterized tests,
+                                Parallel execution
+                            </li>
+                            <li class="checkmark">AssertJ: Fluent assertions for better readability.</li>
+                            <li class="checkmark">Hamcrest: string assertions corner cases.</li>
+                            <li class="checkmark">Lombok: @Data, @Builder, @AllArgsConstructor, @NoArgsConstructor,
+                                @Chain.
+                            </li>
+                            <li class="checkmark">Faker: Generating random data for tests.</li>
+                            <li class="checkmark">Allure: Configuring Allure for a project, Generating Allure reports.
+                            </li>
+                            <li class="checkmark">Jenkins: Configuring Jenkins for a project, Running tests in
+                                Jenkins.
+                            </li>
+                            <li class="checkmark">Selenoid: Configuring Selenoid for a project, Running tests in
+                                Selenoid.
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <strong>Framework custom solutions:</strong>
+                        <ul>
+                            <li class="checkmark">JUnit: Dynamic user creation with Junit Extension, Soft assertions.
+                            </li>
+                            <li class="checkmark">UI: adding custom locators to my frontend.</li>
+                        </ul>
+                    </li>
+
+
+                    <li>
+                        <strong>SQL:</strong>
+                        <ul>
+                            <li class="checkmark">DataGrip SELECT, INNER JOIN, OUTER JOIN, GROUP BY, HAVING clauses.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Algorithms and Patterns:</strong>
+                        <ul>
+                            <li class="checkmark">Binary Search: Understanding and implementing binary search
+                                algorithm.
+                            </li>
+                            <li class="checkmark">Bubble Sort: Understanding and implementing bubble sort algorithm.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Infrastructure:</strong>
+                        <ul>
+                            <li class="checkmark">Tools: Gradle, Selenoid(UI), Docker(pull, start, stop, ps -a, rm,
+                                images), Jenkins, Allure
+                                .
+                            </li>
+                            <li class="checkmark">Version Control: Git: clone, pull, checkout, merge, commit, fetch
+                                operations.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Linux:</strong>
+                        <ul>
+                            <li class="checkmark">Basic Commands: grep, pwd, ls, cd, mv, touch, chmod, cat, less, tail,
+                                awk, Exiting vim editor.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>General:</strong>
+                        <ul>
+                            <li class="checkmark">Client-Server Architecture: Understanding the basic client-server
+                                communication model.
+                            </li>
+                            <li class="checkmark">Test design, decomposition, documentation,reporting
+                            <li class="checkmark">Testing Methodologies: BDD (Behavior Driven Development), TDD (Test
+                                Driven Development), Agile/Waterfall methodologies.
+                            </li>
+                        </ul>
+                    </li>
+
+
+                </ul>
+            </article>
+        </section>
+    </div>
+
 </main>
 <footer>
     <div class="footer-row">
@@ -229,7 +404,7 @@
                 <i class="fab fa-telegram"></i> IgorShingelevich
             </a>
             <br>
-<!--            https://github.com/IgorShingelevich-->
+            <!--            https://github.com/IgorShingelevich-->
             <a href="https://github.com/IgorShingelevich" target="_blank">
                 <i class="fab fa-github"></i> IgorShingelevich on GitHub
             </a>
@@ -239,7 +414,7 @@
         <div class="contacts">
             <h4>Contact Details</h4>
             <p><i class="fas fa-city"></i> Moscow<i class="fas fa-phone"></i> +7 985 546 92 39</p>
-<!--            <p><i class="fas fa-phone"></i> +7 985 546 92 39</p>-->
+            <!--            <p><i class="fas fa-phone"></i> +7 985 546 92 39</p>-->
             <p><i class="fas fa-envelope"></i> shingelevich@gmail.com</p>
         </div>
     </div>
