--- a/index_ru.html
+++ b/index_ru.html
@@ -31,18 +31,15 @@
     <div class="container">
         <div class="left-panel">
             <div class="profile-img-wrapper">
-                <img alt="" src="resources/img/photo-placeholder.png">
+                <img alt="" src="resources/img/ava1.jpg">
             </div>
 
             <section>
                 <div class="about">
                     <p>
-                        Более 1+ года опыта работы в ИТ-индустрии в области тестирования и обеспечения качества, имея
-                        обширный опыт в области тестирования программного обеспечения, включая ручное тестирование,
-                        автоматическое тестирование, которое включает функциональное, производительное, стрессовое,
-                        удобство, регрессивное, системное тестирование веб-основных и клиент-серверных приложений с
-                        использованием различных инструментов, таких как Postman, Devtools, Charles, Selenium, Java,
-                        Browserstack, Docker, GitHub, TestRail, Jenkins, JUnit5 и другие.
+                        Более 1+ года опыта работы в ИТ-индустрии в области тестирования и обеспечения качества,
+                        обширный опыт в области тестирования WEB UI и API, включая ручное и авто-тестирование. Стек:
+                          Java, JUnit5, Selenide, RestAssured, Allure, Jenkins, Selenoid.
                     </p>
                     <br>
                     <p>
@@ -140,13 +137,14 @@
                 <hr>
                 <div class="education-item">
                     <div class="date">
-                        <h3> <i class="fas fa-calendar-alt"></i> 2021 <i class="fas fa-graduation-cap"></i> QA Guru</h3>
+                        <h3><i class="fas fa-calendar-alt"></i> 2021 <i class="fas fa-graduation-cap"></i> QA Guru</h3>
                     </div>
                     <p>Инженер по автоматизации тестирования QA</p>
                 </div>
                 <div class="education-item">
                     <div class="date">
-                        <h3><i class="fas fa-calendar-alt"></i> 2006 - 2013 <i class="fas fa-graduation-cap"></i> Южный Федеральный Университет</h3>
+                        <h3><i class="fas fa-calendar-alt"></i> 2006 - 2013 <i class="fas fa-graduation-cap"></i> Южный
+                            Федеральный Университет</h3>
                     </div>
                     <p>Магистр по психофизиологии</p>
                 </div>
@@ -161,16 +159,25 @@
                     <div class="description">
 
                         <div class="company">
-                            <h3><i class="fas fa-calendar-alt"></i> 2022 - настоящее время <i class="fas fa-building"></i>
+                            <h3><i class="fas fa-calendar-alt"></i> 2022 - настоящее время <i
+                                    class="fas fa-building"></i>
                                 Gasworkers</h3>
                             <h4><i class="fas fa-user"></i> Функциональный тестировщик</h4>
                             <div class="responsibilities">
                                 <ul>
-                                    <li>Разработал и внедрил надежный фреймворк автоматизации для тестирования пользовательского интерфейса с использованием Selenide и Selenoid.</li>
+                                    <li>Разработал и внедрил надежный фреймворк автоматизации для тестирования
+                                        пользовательского интерфейса с использованием Selenide и Selenoid.
+                                    </li>
                                     <li>Создал и поддерживал тесты API с использованием RestAssured.</li>
-                                    <li>Интегрировал отчеты Allure для четкого и информативного отчетности по тестированию.</li>
-                                    <li>Работал в рамках CI/CD-пайплайна, обеспечивая плавные развертывания и высокое качество кода.</li>
-                                    <li>Сотрудничал с межфункциональными командами для тщательного тестирования новых функций и исправления ошибок.</li>
+                                    <li>Интегрировал отчеты Allure для четкого и информативного отчетности по
+                                        тестированию.
+                                    </li>
+                                    <li>Работал в рамках CI/CD-пайплайна, обеспечивая плавные развертывания и высокое
+                                        качество кода.
+                                    </li>
+                                    <li>Сотрудничал с межфункциональными командами для тщательного тестирования новых
+                                        функций и исправления ошибок.
+                                    </li>
                                 </ul>
 
                             </div>
@@ -212,6 +219,170 @@
                 </article>
             </section>
         </div>
+    </div>
+
+    <div class="full-width-section">
+        <section class="skills">
+            <h4 class="section-title">Твердые навыки</h4>
+            <hr>
+            <article>
+                <ul class="skills-list">
+                    <li>
+                        <strong>REST:</strong>
+                        <ul>
+                            <li class="checkmark">Идемпотентность. Statless/Stateful. Операции CRUD.
+                                Safe/Unsafe. Коды ответа.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Java:</strong>
+                        <ul>
+                            <li class="checkmark">Принципы ООП: Инкапсуляция, наследование, полиморфизм и абстракция.
+                            </li>
+                            <li class="checkmark">Модификаторы доступа: Public, private, protected и default. Не
+                                модификаторы доступа: Static.
+                            </li>
+                            <li class="checkmark">Основные концепции: Типы данных, операторы, управляющие конструкции,
+                                обработка исключений.
+                            </li>
+                            <li class="checkmark">Фреймворк коллекций - Map, List. StreamAPI.</li>
+                            <li class="checkmark">Иерархия исключений: Checked/unchecked исключения,
+                                пользовательская обработка исключений.
+                            </li>
+                            <li class="checkmark">Расширенные возможности: Enums, overriding, overloading
+                                методов.
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <strong>RestAssured:</strong>
+                        <ul>
+                            <li class="checkmark">Сериализация, @JsonProperty, @JsonIgnore, @JsonInclude.</li>
+                            <li class="checkmark">Spec Builder: Использование Spec Builders для повторно используемых
+                                спецификаций запроса/ответа.
+                            </li>
+                            <li class="checkmark">Логирование: Настройка логирования запросов и ответов.</li>
+                            <li class="checkmark">Установка: Настройка RestAssured для проекта, установка базового URI и
+                                пути.
+                            </li>
+                            <li class="checkmark">DTO запрос и ответ: Обработка и проверка статуса, пути, заголовков,
+                                запроса, тела.
+                            </li>
+                            <li class="checkmark">Извлечение данных: Извлечение данных из ответа для дальнейшего
+                                использования.
+                            </li>
+                            <li class="checkmark">Параметризация: Отправка параметров и тела в запросах, использование
+                                параметров пути, запроса и формы.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Selenide:</strong>
+                        <ul>
+                            <li class="checkmark">Конфигурация: Настройка Selenide в проекте, настройка свойств браузера
+                                и тайм-аутов.
+                            </li>
+                            <li class="checkmark">Явные и неявные ожидания: Понимание и реализация ожиданий для
+                                обработки синхронизации.
+                            </li>
+                            <li class="checkmark">Структура DOME, локаторы CSS и Xpath.</li>
+                            <li class="checkmark">SelenideElement+Condition ElementsCollection+CollectionCondition
+                                различные действия и утверждения Локаторы: Использование селекторов Selenide для поиска
+                                элементов, обработка динамических элементов.
+                            </li>
+                            <li class="checkmark">POM: определение ролей для пользователей, присваивание контекста
+                                доступных страниц данной роли.
+                            </li>
+                            <li class="checkmark">Загрузка и скачивание файлов: Обработка загрузки и скачивания файлов с
+                                помощью Selenide.
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <strong>Библиотеки фреймворка:</strong>
+                        <ul>
+                            <li class="checkmark">JUnit: Основные аннотации: @Test, @Before, @After, параметризованные
+                                тесты, параллельное выполнение.
+                            </li>
+                            <li class="checkmark">AssertJ: Плавные утверждения для лучшей читаемости.</li>
+                            <li class="checkmark">Hamcrest: угловые случаи утверждений строк.</li>
+                            <li class="checkmark">Lombok: @Data, @Builder, @AllArgsConstructor, @NoArgsConstructor,
+                                @Chain.
+                            </li>
+                            <li class="checkmark">Faker: Генерация случайных данных для тестов.</li>
+                            <li class="checkmark">Allure: Настройка Allure для проекта, генерация отчетов Allure.</li>
+                            <li class="checkmark">Jenkins: Настройка Jenkins для проекта, запуск тестов в Jenkins.</li>
+                            <li class="checkmark">Selenoid: Настройка Selenoid для проекта, запуск тестов в Selenoid.
+                            </li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <strong>Пользовательские решения внутри фреймворка:</strong>
+                        <ul>
+                            <li class="checkmark">JUnit: Динамическое создание пользователей с помощью расширения Junit,
+                                мягкие утверждения.
+                            </li>
+                            <li class="checkmark">UI: добавление пользовательских локаторов к моему фронтенду.</li>
+                        </ul>
+                    </li>
+
+                    <li>
+                        <strong>SQL:</strong>
+                        <ul>
+                            <li class="checkmark">DataGrip SELECT, INNER JOIN, OUTER JOIN, GROUP BY, HAVING clauses.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Алгоритмы и шаблоны:</strong>
+                        <ul>
+                            <li class="checkmark">Бинарный поиск: Понимание и реализация алгоритма бинарного поиска.
+                            </li>
+                            <li class="checkmark">Пузырьковая сортировка: Понимание и реализация алгоритма пузырьковой
+                                сортировки.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Инфраструктура:</strong>
+                        <ul>
+                            <li class="checkmark">Инструменты: Gradle, Selenoid(UI), Docker(pull, start, stop, ps -a,
+                                rm, images), Jenkins, Allure.
+                            </li>
+                            <li class="checkmark">Управление версиями: Git: clone, pull, checkout, merge, commit, fetch
+                                operations.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Linux:</strong>
+                        <ul>
+                            <li class="checkmark">Основные команды: grep, pwd, ls, cd, mv, touch, chmod, cat, less,
+                                tail, awk, выход из редактора vim.
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <strong>Общие:</strong>
+                        <ul>
+                            <li class="checkmark">Архитектура клиент-сервер: Понимание базовой модели коммуникации
+                                клиент-сервер.
+                            </li>
+                            <li class="checkmark">Проектирование тестов, декомпозиция, документирование, отчетность.
+                            </li>
+                            <li class="checkmark">Методологии тестирования: BDD (Разработка на основе поведения), TDD
+                                (Разработка на основе тестирования), методологии Agile/Waterfall.
+                            </li>
+                        </ul>
+                    </li>
+
+                </ul>
+            </article>
+        </section>
     </div>
 </main>
 <footer>
