--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive viewport meta tag -->
     <link href="fav_01.ico" rel="icon" type="image/x-icon">
-
     <title>QA Shingelevich CV</title>
     <link href="style.css" rel="stylesheet">
     <script crossorigin="anonymous" src="https://kit.fontawesome.com/84affb6238.js"></script>
