fix key achievements, mob breakdown

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive viewport meta tag -->
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"> <!-- Responsive viewport meta tag -->
     <link href="fav_01.ico" rel="icon" type="image/x-icon">
     <title>QA Shingelevich CV</title>
     <link href="style.css" rel="stylesheet">
@@ -163,17 +163,20 @@
                             <h4><i class="fas fa-user"></i> Functional Tester</h4>
                             <div class="responsibilities">
                                 <ul>
-                                    <li>Designed and implemented a robust automation framework for UI testing using
-                                        Selenide and Selenoid.
+                                    <li>Junit. Implemented dynamic user creation with Junit Extension. Assign the
+                                        business roles to the browser instances during the test execution. Implemented soft assertions to collect all the assertions and report them at the end of the test.
                                     </li>
-                                    <li>Created and maintained API tests using RestAssured.</li>
+                                    <li>RestAssured. Covered behavior of the system with on API level following the user stories.
+                                        Implemented state transition approach, with the business logic in mind, to describe
+                                        possible states of the system with the chain of API requests.
+                                    </li>
+                                    <li>Selenide. Implemented diverse POM structure to describe different user roles.
+                                        Created context of pages/components to the given role. Following the business
+                                        logic, described the state transition of the UI components for each given state
+                                        within the context of different roles.
+                                    </li>
                                     <li>Integrated Allure reports for clear and insightful test reporting.</li>
-                                    <li>Worked within a CI/CD pipeline, ensuring smooth deployments and high code
-                                        quality.
-                                    </li>
-                                    <li>Collaborated with cross-functional teams to ensure thorough testing of new
-                                        features and bug fixes.
-                                    </li>
+                                    <li>Remote execution of tests in Selenoid.</li>
                                 </ul>
 
                             </div>
