--- a/index_ru.html
+++ b/index_ru.html
@@ -165,21 +165,27 @@
                             <h4><i class="fas fa-user"></i> Функциональный тестировщик</h4>
                             <div class="responsibilities">
                                 <ul>
-                                    <li>Разработал и внедрил надежный фреймворк автоматизации для тестирования
-                                        пользовательского интерфейса с использованием Selenide и Selenoid.
+                                    <li>
+                                        <strong>Junit.</strong> Реализована динамическая создание пользователей с помощью Junit Extension. Назначение экземплярам браузера
+                                        для каждой бизнес-роли во время выполнения теста для последующей работы с контекстом POM и отчетностью. Реализованы soft assertions для сбора ряда проверок и отчета о них в конце теста.
                                     </li>
-                                    <li>Создал и поддерживал тесты API с использованием RestAssured.</li>
-                                    <li>Интегрировал отчеты Allure для четкого и информативного отчетности по
-                                        тестированию.
+                                    <li>
+                                        <strong>RestAssured.</strong> Покрытие поведения системы на уровне API, следуя пользовательским историям.
+                                        Реализован подход к переходу состояний, учитывая бизнес-логику, для описания
+                                        возможных состояний системы с помощью цепочки запросов API.
                                     </li>
-                                    <li>Работал в рамках CI/CD-пайплайна, обеспечивая плавные развертывания и высокое
-                                        качество кода.
+                                    <li>
+                                        <strong>Selenide.</strong> Реализована зависимая от контекста  структура POM для описания различных пользовательских ролей.
+                                        Создание контекста страниц/компонентов для каждой роли. Следуя бизнес-логике, описан переход состояния UI-компонентов для каждого заданного состояния
+                                        в контексте различных ролей.
                                     </li>
-                                    <li>Сотрудничал с межфункциональными командами для тщательного тестирования новых
-                                        функций и исправления ошибок.
+                                    <li>
+                                        <strong>Интеграция отчетов Allure</strong> для четкой и информативной отчетности по тестированию.
+                                    </li>
+                                    <li>
+                                        <strong>Удаленное выполнение тестов в Selenoid.</strong>
                                     </li>
                                 </ul>
-
                             </div>
                         </div>
 
