fix key achievements, mob breakdown

--- a/index.html
+++ b/index.html
@@ -163,20 +163,31 @@
                             <h4><i class="fas fa-user"></i> Functional Tester</h4>
                             <div class="responsibilities">
                                 <ul>
-                                    <li>Junit. Implemented dynamic user creation with Junit Extension. Assign the
-                                        business roles to the browser instances during the test execution. Implemented soft assertions to collect all the assertions and report them at the end of the test.
+                                    <li><strong>Junit.</strong> Implemented dynamic user creation with Junit Extension.
+                                        Assign the
+                                        business roles to the browser instances during the test execution. Implemented
+                                        soft assertions to collect all the assertions and report them at the end of the
+                                        test.
                                     </li>
-                                    <li>RestAssured. Covered behavior of the system with on API level following the user stories.
-                                        Implemented state transition approach, with the business logic in mind, to describe
+                                    <li><strong>RestAssured.</strong> Covered behavior of the system with on API level
+                                        following the user stories.
+                                        Implemented state transition approach, with the business logic in mind, to
+                                        describe
                                         possible states of the system with the chain of API requests.
                                     </li>
-                                    <li>Selenide. Implemented diverse POM structure to describe different user roles.
+                                    <li><strong>Selenide.</strong> Implemented diverse POM structure to describe
+                                        different user roles.
                                         Created context of pages/components to the given role. Following the business
                                         logic, described the state transition of the UI components for each given state
                                         within the context of different roles.
                                     </li>
-                                    <li>Integrated Allure reports for clear and insightful test reporting.</li>
-                                    <li>Remote execution of tests in Selenoid.</li>
+                                    <li><strong>Allure Reports.</strong> Integrated Allure reports for clear and
+                                        insightful test reporting.
+                                    </li>
+                                    <li>
+                                        <strong>Jenkins.</strong> Setting up Jenkins for a project. Running tests in
+                                        Jenkins.
+                                    </li>
                                 </ul>
 
                             </div>
