--- a/index_ru.html
+++ b/index_ru.html
@@ -180,10 +180,10 @@
                                         в контексте различных ролей.
                                     </li>
                                     <li>
-                                        <strong>Интеграция отчетов Allure</strong> для четкой и информативной отчетности по тестированию.
+                                        <strong>Allure Reports.</strong> Интеграция отчетов для отображения результатов тестов в Jenkins.
                                     </li>
                                     <li>
-                                        <strong>Удаленное выполнение тестов в Selenoid.</strong>
+                                        <strong>Jenkins.</strong> Настройка Jenkins для проекта. Удаленное выполнение тестов в Jenkins.
                                     </li>
                                 </ul>
                             </div>
